--- a/src/mainPage/mainPage.css
+++ b/src/mainPage/mainPage.css
@@ -1,29 +1,143 @@
-.incident-table {
+.incidentTable {
     border-collapse: collapse;
     text-align: left;
+    overflow-y: auto;
   }
   
-  .incident-table th,
-  .incident-table td {
-    padding: 8px 12px;
-    border: 1px solid #ddd;
-  }
-  
-  .incident-table th {
-    background-color: #f4f4f4;
-  }
-  
-  .more-info-btn {
-    color: grey;
-    background: none;
-    border: none;
-    cursor: pointer;
-  }
-  
-  .delete-btn {
-    color: red;
-    background: none;
-    border: none;
-    cursor: pointer;
-  }
-  
+.incidentTable th,
+.incidentTable td {
+  padding: 8px 12px;
+  border: 1px solid #ddd;
+}
+
+.incidentTable th {
+  background-color: #f4f4f4;
+}
+
+.more-info-btn {
+  color: grey;
+  background: none;
+  border: none;
+  cursor: pointer;
+}
+
+.delete-btn {
+  color: red;
+  background: none;
+  border: none;
+  cursor: pointer;
+}
+.error {
+  color: red;
+  font-size: small;
+}
+
+.homePage{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 100vh;
+}
+
+.mapContainer {
+  flex-shrink: 0;
+  min-height: 30vh;
+  width: 100%;
+}
+
+
+.formContainer {
+  display: flex;
+  height: 50vh;
+  flex-direction: column;
+  align-items: center;
+}
+
+.modal-content { 
+  background-color: white;
+  padding: 20px;
+  border-radius: 5px;
+  position: relative;
+}
+
+.modal { 
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0,0,0,0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000; 
+}
+
+.close-button {
+  position: absolute; /* Add this */
+  font-size: x-large; /* Adjust as needed */
+  top: 0px; /* Adjust as needed */
+  right: 10px; /* Adjust as needed */
+  cursor: pointer;
+}
+
+.formTable {
+  width: 100%;
+  max-width: 600px; /* Adjust as needed */
+  border-collapse: collapse;
+  margin-bottom: 20px;
+}
+
+.formTable td {
+  padding: 10px;
+  border: 1px solid grey;
+  background-color: lightgrey;
+  text-align: left;
+}
+
+.formTable input[type="text"],
+.formTable input[type="tel"],
+.formTable textarea {
+  width: 100%;
+  padding: 8px;
+  border: 1px solid black;
+  box-sizing: border-box;
+}
+
+.formTable button[type="submit"] {
+  background-color: #007bff; 
+  color: white;
+  padding: 10px 20px;
+  border: none;
+  cursor: pointer;
+  transition: transform 0.1s ease-in-out;
+  border-radius: 5px; 
+}
+
+.formTable button[type="submit"]:hover {
+  background-color: #0056b3;
+  transform: scale(1.1);
+  transition: transform 0.1s ease-in-out;
+}
+
+.reportButton {
+  background-color: rgb(231, 80, 80); 
+  color: white;
+  padding: 10px 20px;
+  border: none;
+  cursor: pointer;
+  transition: transform 0.1s ease-in-out;
+  border-radius: 5px; 
+}
+
+.reportButton:hover {
+  background-color: rgb(200, 70, 70);
+  transform: scale(1.1);
+  transition: transform 0.1s ease-in-out;
+}
+
+.error {
+  color: #d9534f;
+  font-size: 0.9em;
+  margin-top: 5px;
+}
