--- a/src/mainPage/mainPage.css
+++ b/src/mainPage/mainPage.css
@@ -1,48 +1,29 @@
-.incidentTable {
-    border-collapse: collapse;
-    text-align: left;
-    overflow-y: auto;
-  }
-  
-.incidentTable th,
-.incidentTable td {
-  padding: 8px 12px;
-  border: 1px solid #ddd;
-}
-
-.incidentTable th {
-  background-color: #f4f4f4;
-}
-
-.more-info-btn {
-  color: grey;
-  background: none;
-  border: none;
-  cursor: pointer;
-}
-
-.delete-btn {
-  color: red;
-  background: none;
-  border: none;
-  cursor: pointer;
-}
-.error {
-  color: red;
-  font-size: small;
-}
 
 /* General page layout */
 .homePage{
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 20px;
   background-color: #f9f9f9;
   font-family: Arial, sans-serif;
   gap: 20px;
 }
 
+.header {
+  width: 100%;
+  background-color: #d8f3dc; /* Pastel green */
+  color: #1b4332; /* Darker green for text */
+  text-align: center;
+  padding: 20px 0;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Subtle shadow for depth */
+  font-family: 'Arial', sans-serif;
+  font-size: 1.5rem;
+  font-weight: bold;
+}
+
+.header h1 {
+  margin: 0;
+}
 
 /* Map container styling */
 .mapContainer {
@@ -72,13 +53,13 @@
 }
 
 .figureContainer img {
-  width: 50%;
-  height: 50%;
+  display: block;
+  max-width: 100%;
+  height: auto;
   border-radius: 8px;
-  margin-bottom: 20px;
+  margin: 0 auto;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
   /* Center the image */
-  display: block;
 }
 
 .figureContainer p {
@@ -91,14 +72,26 @@
   border: none;
   border-radius: 4px;
   cursor: pointer;
-  margin-right: 10px;
   margin-left: 10px;
+  margin-right: 10px;
   font-weight: bold;
   background-color: #d8d8d8;
 }
 
-.figureContainer button:hover {
-  background-color: #979797;
+.figureContainer button[type="submit"]:hover {
+  background-color: #289e44;
+  transform: scale(1.1);
+  transition: transform 0.1s ease-in-out;
+}
+
+.figureContainer button[type="cancel"]:hover {
+  background-color: #888888;
+  transform: scale(1.1);
+  transition: transform 0.1s ease-in-out;
+}
+
+.change-button:hover {
+  background-color: #9e9e9e;
   transform: scale(1.1);
   transition: transform 0.1s ease-in-out;
 }
@@ -208,53 +201,16 @@
   cursor: pointer;
 }
 
-.formTable {
-  width: 100%;
-  max-width: 600px; 
-  border-collapse: collapse;
-  margin-bottom: 20px;
-}
-
-.formTable td {
-  padding: 10px;
-  border: 1px solid grey;
-  background-color: lightgrey;
-  text-align: left;
-}
-
-.formTable input[type="text"],
-.formTable input[type="tel"],
-.formTable textarea {
-  width: 100%;
-  padding: 8px;
-  border: 1px solid black;
-  box-sizing: border-box;
-}
-
-.formTable button[type="submit"] {
-  background-color: #007bff; 
-  color: white;
-  padding: 10px 20px;
-  border: none;
-  cursor: pointer;
-  transition: transform 0.1s ease-in-out;
-  border-radius: 5px; 
-}
-
-.formTable button[type="submit"]:hover {
-  background-color: #0056b3;
-  transform: scale(1.1);
-  transition: transform 0.1s ease-in-out;
-}
-
 .reportButton {
   background-color: rgb(231, 80, 80); 
   color: white;
-  padding: 10px 20px;
+  padding: 15px 30px;
   border: none;
   cursor: pointer;
   transition: transform 0.1s ease-in-out;
-  border-radius: 5px; 
+  border-radius: 8px; 
+  font-size: 1.2rem;
+  font-weight: bold;
 }
 
 .reportButton:hover {
@@ -267,62 +223,6 @@
   color: #d9534f;
   font-size: 0.9em;
   margin-top: 5px;
-}
-
-
-/* Password related styles */
-
-.password-popup-overlay {
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: rgba(0, 0, 0, 0.5); /* semi-transparent background */
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  z-index: 1000; /* Ensures it's above other content */
-}
-
-.password-popup {
-  background-color: #ffffff;
-  border-radius: 8px;
-  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
-  padding: 20px;
-  width: 300px;
-  text-align: center;
-}
-
-.password-popup h2 {
-  margin-bottom: 15px;
-}
-
-.password-popup form {
-  display: flex;
-  flex-direction: column;
-}
-
-.password-popup input {
-  margin-bottom: 10px;
-  padding: 8px;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-}
-
-.password-popup button {
-  margin-top: 5px;
-  padding: 8px 16px;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-  background-color: #007bff;
-  color: white;
-  font-size: 14px;
-}
-
-.password-popup button[type="button"] {
-  background-color: #ccc;
 }
 
 /* Change incident form styling */
@@ -365,6 +265,8 @@ form h2 {
 /* Labels */
 form label {
   display: block;
+  margin-right: 10px;
+  width: 100%;
   margin-bottom: 8px;
   font-weight: bold;
   color: #555;
@@ -374,7 +276,7 @@ form label {
 form input,
 form textarea,
 form select {
-  width: calc(100% - 20px); /* Account for padding */
+  width: 100%; /* Account for padding */
   padding: 8px 10px;
   margin-bottom: 15px;
   border: 1px solid #ccc;
@@ -391,36 +293,35 @@ form textarea {
 }
 
 /* Buttons */
-form button {
-  padding: 10px 20px;
-  font-size: 1rem;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-  margin-right: 10px; /* Add spacing between buttons */
-  font-weight: bold;
+form tr td button {
+  margin-left: 0 !important;
 }
 
-/* Update button */
 form button[type="submit"] {
-  background-color: #28a745; /* Green color for update */
+  background-color: #3bad56;
   color: white;
 }
 
 /* Cancel button */
-form button[type="button"] {
-  background-color: #dc3545; /* Red color for cancel */
+form button[type="cancel"] {
+  background-color: #949494; /* Red color for cancel */
   color: white;
 }
 
-/* Hover effects for buttons */
-form button:hover {
-  opacity: 0.9; /* Slight transparency */
+form button[type="delete"] {
+  background-color: #dc3545;
+  color: white;
+}
+
+form button[type="delete"]:hover {
+  background-color: #c82333;
+  transform: scale(1.1);
+  transition: transform 0.1s ease-in-out;
 }
 
 /* Error message styling */
 .error {
-  color: #dc3545; /* Match error color with the cancel button */
+  color: #dc3545;
   font-size: 0.9rem;
   margin-top: -10px;
   margin-bottom: 10px;
@@ -432,6 +333,67 @@ table {
   border-collapse: collapse;
 }
 
+/* Password related styles */
+
+.password-popup-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.5); /* semi-transparent background */
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000; /* Ensures it's above other content */
+  outline: 2px solid red;
+}
+
+.password-popup {
+  background-color: #fafafa;
+  border-radius: 8px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
+  padding: 20px;
+  width: 100%;
+  max-width: 300px;
+  display: flex;
+  flex-direction: column;
+}
+
+.password-popup h2 {
+  margin-bottom: 15px;
+}
+
+.password-popup form {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.password-popup input {
+  margin-bottom: 10px;
+  padding: 8px;
+  width: 100%;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+  text-align: center;
+}
+
+.password-popup button {
+  margin-top: 5px;
+  margin-left: 0;
+  margin-right: 0;
+  padding: 10px;
+  width: 100%;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  background-color: #28a745;
+  color: white;
+  font-size: 14px;
+}
 
 .address-suggestions{
   position: absolute;
@@ -443,6 +405,7 @@ table {
   background-color: white;
   border: 1px solid black;
   z-index: 10;
+  border-radius: 8px;
 }
 .address-suggestions ul {
   list-style-type: none;
@@ -457,10 +420,13 @@ table {
   cursor: pointer;
   background-color: white;
   transition: transform 0.1s ease-in-out;
+  border-radius: 8px;
 }
 
 .address-suggestions li:hover {
   transform: scale(1.1);
   transition: transform 0.1s ease-in-out;
+  border-radius: 8px;
+  border: 1px solid black;
 }
 
