small change lol made the table header green

--- a/src/mainPage/mainPage.css
+++ b/src/mainPage/mainPage.css
@@ -122,7 +122,7 @@
 }
 
 .incidentTable th {
-  background-color: #ddd;
+  background-color: #d8eccec7;
   text-transform: uppercase;
   font-weight: bold;
   text-align: center;
