--- a/src/mainPage/mainPage.css
+++ b/src/mainPage/mainPage.css
@@ -10,6 +10,8 @@
 }
 
 .header {
+  align-items: center;
+  position: relative;
   width: 100%;
   background-color: #d8f3dc; /* Pastel green */
   color: #1b4332; /* Darker green for text */
@@ -19,10 +21,79 @@
   font-family: 'Arial', sans-serif;
   font-size: 1.5rem;
   font-weight: bold;
+  box-sizing: border-box;
+}
+.logo {
+  position: absolute;
+  left: 20px;
+  height: auto; 
+  width: 12%;
+  margin-right: 10px; 
 }
 
 .header h1 {
+  flex-grow: 1;
   margin: 0;
+  text-align: center;
+  font-size: 2vw;
+}
+.report-info {
+  margin: 20px auto;
+  padding: 20px;
+  max-width: 800px;
+  background-color: #f8f9fa; /* Subtle background color */
+  border: 1px solid #d6d8db; /* Light border for structure */
+  border-radius: 8px; /* Rounded corners for a clean look */
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Add depth with shadow */
+  font-family: 'Arial', sans-serif; /* Ensure consistency in font */
+  text-align: center;
+}
+
+.report-info h2 {
+  margin: 0 0 10px; /* Space below the heading */
+  font-size: 1.75rem;
+  color: #1b4332; /* Dark green for emphasis */
+}
+
+.report-info p {
+  margin: 0;
+  font-size: 1rem;
+  line-height: 1.6; /* Improve readability */
+  color: #333; /* Neutral text color */
+}
+
+.report-info strong {
+  color: #a01b17; /* Highlight key information in red */
+}
+
+@media screen and (max-width: 768px) {
+  .header {
+    flex-direction: row; /* Maintain horizontal layout on small screens */
+    padding: 10px; /* Reduce padding */
+  }
+
+  .logo {
+    width: 8%; /* Adjust logo size */
+  }
+
+  .header h1 {
+    font-size: 4vw; /* Adjust text size for smaller screens */
+  }
+}
+.situations {
+  display: flex;
+  justify-content: space-around;
+  margin-top: 20px;
+}
+
+.situations ul li {
+  display: flex; 
+  flex-direction: row; 
+  align-items: center; 
+  margin: 10px 0;
+}
+.situations ul li img {
+  margin-bottom: 10px; 
 }
 
 /* Map container styling */
